--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
+
+
 YOUTUBE_API=AIzaSyBXedA1BZuTK2rs4mr1vjJhwYcCVwD_zdE
+
+GOOGLE_CLIENT_ID=528576679572-kvujd021hg3tjhg8t6r781a7ekme3aco.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+GOOGLE_API=AIzaSyBrmMQ-e9NWvU17okVC-40ceikhD8kqY94
