NGtube update 27-5-2024#latest

--- a/.env
+++ b/.env
@@ -1,7 +1,9 @@
-
-
-YOUTUBE_API=AIzaSyBXedA1BZuTK2rs4mr1vjJhwYcCVwD_zdE
-
+YOUTUBE_API_KEY=AIzaSyDppR0KAJKAjCAnRQEGn7pE_4fAD6lC4v0
 GOOGLE_CLIENT_ID=528576679572-kvujd021hg3tjhg8t6r781a7ekme3aco.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
-GOOGLE_API=AIzaSyBrmMQ-e9NWvU17okVC-40ceikhD8kqY94
+GOOGLE_API_KEY=AIzaSyBrmMQ-e9NWvU17okVC-40ceikhD8kqY94
+
+VITE_YOUTUBE_API_KEY=${YOUTUBE_API_KEY}
+GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}
+GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET}
+GOOGLE_API_KEY=${GOOGLE_API_KEY}
