--- a/package.json
+++ b/package.json
@@ -6,19 +6,24 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "nodemon src/server.js"
   },
   "dependencies": {
     "@remixicon/vue": "^4.2.0",
     "@vueuse/core": "^10.9.0",
+    "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "lucide-vue-next": "^0.378.0",
     "radix-vue": "^1.8.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.2",
+    "vue-router": "^4.0.13",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
